--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ document.body.appendChild(renderer.domElement);
 // Load .obj file
 var loader = new THREE.OBJLoader();
 loader.load(
-  'path/to/your/model.obj',
+  'tinker.obj',
   function (object) {
     scene.add(object);
   }
