--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         var loader = new THREE.OBJLoader();
         loader.load(
-            'tu_archivo.obj',
+            'tinker.obj',
             function (object) {
                 scene.add(object);
             }
