--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1>Dino head</h1>
+      <h1>Plasma Facing Unit in ITER-like divertor</h1>
     </header>
 
     <main>
