--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>A simple Three.JS App</title>
+    <title>PhD thesis results</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
+  
   <body>
     <header>
       <h1>Plasma Facing Unit in ITER-like divertor</h1>
     </header>
+
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Our team</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+
+  <!-- A Search form is another common non-linear way to navigate through a website. -->
+
+    <form>
+      <input type="search" name="q" placeholder="Search query" />
+      <input type="submit" value="Go!" />
+    </form>
+  </nav>
 
     <main>
       <div id="container3D"></div>
