--- a/index.html
+++ b/index.html
@@ -15,21 +15,13 @@
       <h1>Plasma Facing Unit in ITER-like divertor</h1>
     </header>
 
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Our team</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+    <main>
+      <div id="container3D"></div>
+    </main>
 
-  <!-- A Search form is another common non-linear way to navigate through a website. -->
-
-    <form>
-      <input type="search" name="q" placeholder="Search query" />
-      <input type="submit" value="Go!" />
-    </form>
-  </nav>
+    <header>
+      <h1>This is another testr</h1>
+    </header>
 
     <main>
       <div id="container3D"></div>
