--- a/index.html
+++ b/index.html
@@ -17,14 +17,8 @@
 
     <main>
       <div id="container3D"></div>
-    </main>
 
-    <header>
-      <h1>This is another testr</h1>
-    </header>
-
-    <main>
-      <div id="container3D"></div>
+      <p> Geckos are a group of usually small, usually nocturnal lizards. They are found on every continent except Antarctica.</p>
     </main>
 
     <script type="module" src="js/main.js"></script>
