--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!--
-  EYE FREE MODEL 3D BY Oscar creativo by OSCAR CREATIVO is licensed under Creative Commons Attribution.
-  Juvenile Teratophoneus curriei byrankinstudio is licensed under Creative Commons Attribution.
--->
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -13,13 +8,8 @@
   <body>
     <header>
       <h1>Plasma Facing Unit in ITER-like divertor</h1>
+      <p>Check out our website: <a href="http://www.gosquadron.com">gosquadron.com</a></p>
     </header>
-
-    <main>
-      <div id="container3D"></div>
-
-      <p> Geckos are a group of usually small, usually nocturnal lizards. They are found on every continent except Antarctica.</p>
-    </main>
 
     <script type="module" src="js/main.js"></script>
   </body>
