--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   
   <body>
     <header>
-      <h1>Plasma Facing Unit in ITER-like divertor</h1>
-      <p>Check out our website: <a href="http://www.gosquadron.com">gosquadron.com</a></p>
+      <h1>3D objects and animations of my thesis results</h1>
+      <p> <p>
+      <p>Check out our website: <a href="https://yosvanyss.github.io/pfu">Plasa Facing Unit</a></p>
+
+      <p> <p>
+      <p>Check out our website: <a href="https://yosvanyss.github.io/interface">W/Cu interface</a></p>
     </header>
 
     <script type="module" src="js/main.js"></script>
