--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <p>Check out our website: <a href="https://yosvanyss.github.io/interface">W/Cu interface</a></p>
     </header>
 
+    <button type="button"> TEST </button>
+
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
