--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <p>Check out our website: <a href="https://yosvanyss.github.io/interface">W/Cu interface</a></p>
     </header>
 
-    <button type="button"> TEST </button>
+    <a href="https://yosvanyss.github.io/interface">
+      <button type="button"> TEST </button>
+    </a>
+
 
     <script type="module" src="js/main.js"></script>
   </body>
