--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <a href="https://yosvanyss.github.io/interface">
-      <button type="button" class="buton"> TEST </button>
+      <button type="button" class="button"> TEST </button>
     </a>
 
 
