--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <header>
       <h1>3D objects and animations of my thesis results</h1>
       <p> <p>
-      <p>Check out our website: <a href="https://yosvanyss.github.io/pfu">Plasa Facing Unit</a></p>
+      <p>Check out our website: <a href="https://yosvanyss.github.io/pfu">Plasma Facing Unit</a></p>
 
       <p> <p>
       <p>Check out our website: <a href="https://yosvanyss.github.io/interface">W/Cu interface</a></p>
     </header>
 
-    <a href="https://yosvanyss.github.io/interface">
-      <button type="button" class="button"> TEST </button>
+    <a href="https://yosvanyss.github.io/pfu">
+      <button type="button" class="button"> Plasma Facing Unit </button>
     </a>
 
 
