--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <button type="button" class="button"> Plasma Facing Unit </button>
     </a>
 
+    <button>Hover Me</button>
+
 
     <script type="module" src="js/main.js"></script>
   </body>
