--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <button type="button" class="button"> Plasma Facing Unit </button>
     </a>
 
+    <a href="https://yosvanyss.github.io/interface">
+      <button type="button" class="button"> W/Cu interface with interstitial H atoms </button>
+    </a>
+
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
