--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </header>
 
     <a href="https://yosvanyss.github.io/pfu">
-      <button type="button" class="button"> Plasma Facing Unit </button>
+      <button type="button" class="button" style = "position:absolute; top:20px;"> Plasma Facing Unit </button>
     </a>
 
     <a href="https://yosvanyss.github.io/interface">
-      <button type="button" class="button"> W/Cu interface with interstitial H atoms </button>
+      <button type="button" class="button" style = "position:absolute; top:60px;"> W/Cu interface with interstitial H atoms </button>
     </a>
 
     <script type="module" src="js/main.js"></script>
