--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
     <header>
       <h1>3D objects and animations of my thesis results</h1>
       <p> <p>
-      <p>Check out our website: <a href="https://yosvanyss.github.io/pfu">Plasma Facing Unit</a></p>
-
-      <p> <p>
-      <p>Check out our website: <a href="https://yosvanyss.github.io/interface">W/Cu interface</a></p>
+      <p>In this page users can have a full 3D representations ...</p>
     </header>
 
     <a href="https://yosvanyss.github.io/pfu">
-      <button type="button" class="button" style = "position:absolute; top:50%;"> Plasma Facing Unit </button>
+      <button type="button" class="button" style = "position:absolute; top:30%;"> Plasma Facing Unit </button>
     </a>
 
     <a href="https://yosvanyss.github.io/interface">
-      <button type="button" class="button" style = "position:absolute; top:70%;"> W/Cu interface with interstitial H atoms </button>
+      <button type="button" class="button" style = "position:absolute; top:50%;"> W/Cu interface with interstitial H atoms </button>
     </a>
 
     <script type="module" src="js/main.js"></script>
