--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <button type="button" class="button" style = "position:absolute; top:50%;"> W/Cu interface with interstitial H atoms </button>
     </a>
 
+    <a href="https://yosvanyss.github.io/interface">
+      <button type="button" class="button" style = "position:absolute; top:70%;"> Molecular Dynamics simulations </button>
+    </a>
+
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
