--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button type="button" class="button" style = "position:absolute; top:50%;"> W/Cu interface with interstitial H atoms </button>
     </a>
 
-    <a href="https://yosvanyss.github.io/interface">
+    <a href="https://yosvanyss.github.io/md_simulations">
       <button type="button" class="button" style = "position:absolute; top:70%;"> Molecular Dynamics simulations </button>
     </a>
 
