--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   
   <body>
     <header>
-      <h1>3D objects and animations of my thesis results</h1>
+      <h1> 3D objects and animations of my thesis results </h1>
       <p> <p>
-      <p>In this page users can have a full 3D representations ...</p>
+      <p> On this page, users can access complete 3D representations of the key figures from my doctoral thesis. </p>
     </header>
 
     <a href="https://yosvanyss.github.io/pfu">
